# python-mcp-server-demo

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  TODO.md  compose.yml  logging-dev.json  logging.json  pyproject.toml  pytest.ini  sonar-project.properties
.github/: example.dependabot.yml
.github/template/: apply.sh  template-compose.yml  validate.sh
.github/workflows/: check-pull-request.yml  publish-hotfix.yml  publish.yml  template.yml
app/: config.py  main.py  test_main.py
app/common/: http_client.py  log_utils.py  metrics.py  mongo.py  test_http_client.py  tls.py  tracing.py
app/entrypoints/http/: main.py
app/entrypoints/stdio/: main.py
app/example/: router.py
app/health/: router.py
app/mcp/demo_server/: server.py
compose/: aws.env
scripts/: start_dev_server.sh
tests/: test_main.py
