[project]
name = "cdp-python-backend-template"
version = "0.1.0"
description = "CDP Python Backend Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-logger>=0.1.0",
    "aws-embedded-metrics>=3.3.0",
    "dnspython>=2.7.0",
    "ecs-logging>=2.2.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "pymongo[aws,encryption,snappy,zstd]>=4.13.1",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format = "uv run ruff format . && uv run ruff check . --fix"
