[project]
name = "python-mcp-server-demo"
version = "0.1.0"
description = "A demo Python MCP server using FastAPI and MongoDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-logger>=0.1.0",
    "aws-embedded-metrics>=3.3.0",
    "dnspython>=2.7.0",
    "ecs-logging>=2.2.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "pydantic-settings>=2.9.1",
    "pymongo[aws,encryption,snappy,zstd]>=4.13.1",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[project.scripts]
python-mcp-server-demo-stdio = "app.entrypoints.stdio.main:main"
python-mcp-server-demo-http = "app.entrypoints.http.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.taskipy.tasks]
format = "uv run ruff format . && uv run ruff check . --fix"
